# TeamSpeakClaw

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  README_EN.md  build.rs  docker-compose.yml  plan.md
.github/: cliff.toml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  cleanup-untagged.yml  deploy-website.yml  docker-sha.yml  release.yml  reusable-build.yml  reusable-changelog.yml  reusable-docker.yml  reusable-meta.yml
config/: acl.toml  prompts.toml  settings.toml
docs/: Development.md  Development_CN.md  design.md  developer.md
examples/: docker-compose.yml
examples/config/: acl.toml  prompts.toml  settings.toml
proto/: voice.proto
src/: cli.rs  config.rs  error.rs  log.rs  main.rs  router.rs  skills.rs
src/adapter/: command.rs  connection.rs  event.rs  headless.rs  mod.rs  napcat.rs  unified.rs
src/adapter/headless/: actor.rs  adapter.rs  audio.rs  connection.rs  crypto.rs  error.rs  event.rs  identity.rs  mod.rs  packet.rs  packet_handler.rs  playback.rs  reconnect.rs  serverquery.rs  service.rs  speech.rs  tts.rs  types.rs  voice_service.rs
src/adapter/napcat/: api.rs  event.rs  mod.rs  types.rs  ws.rs
src/adapter/serverquery/: command.rs  connection.rs  event.rs  mod.rs
src/audit/: log.rs  mod.rs
src/cache/: client_cache.rs  mod.rs
src/config/: .instructions.md  acl.rs  bot.rs  headless.rs  llm.rs  logging.rs  mod.rs  music_backend.rs  music_ncm_api.rs  napcat.rs  prompts.rs  rate_limit.rs  serverquery.rs
src/headless/: audio.rs  connection.rs  crypto.rs  error.rs  identity.rs  mod.rs  packet.rs  packet_handler.rs  reconnect.rs
src/llm/: context.rs  engine.rs  mod.rs  provider.rs  schema.rs  tool_loop.rs
src/permission/: acl.rs  gate.rs  mod.rs
src/router/: headless_bridge.rs  history.rs  mod.rs  nc_router.rs  sq_router.rs  ts_router.rs  unified.rs  voice_router.rs
src/skills/: communication.rs  information.rs  mod.rs  moderation.rs  music.rs  web_search.rs
src/skills/meeting_summary/: mod.rs  recorder.rs  storage.rs  summarizer.rs  transcriber.rs
src/skills/music/: command.rs  mod.rs  ncm_api.rs  response.rs  ts3audiobot.rs  tsbot_http.rs  tsmusicbot.rs  unm.rs
website/: docusaurus.config.ts  package-lock.json
website/docs/: configuration.md  developer.md  intro.md  setup.md  skills-guide.md  usage.md
website/i18n/en/: code.json
website/i18n/en/docusaurus-plugin-content-docs/current/: configuration.md  developer.md  intro.md  setup.md  skills-guide.md  usage.md
website/i18n/en/docusaurus-theme-classic/: footer.json  navbar.json
website/src/pages/: index.module.css  index.tsx
