[package]
name = "teamspeakclaw"
version = "0.0.0"
edition = "2021"
authors = ["Dr1mH4X"]
repository = "https://github.com/Dr1mH4X/TeamSpeakClaw"
description = "LLM-powered TeamSpeak ServerQuery bot"
license = "MIT"

[[bin]]
name = "teamspeakclaw"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "6"
governor = "0.6"
nonzero_ext = "0.3"
notify = { version = "6", features = ["macos_kqueue"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
arc-swap = "1"
futures = "0.3"
bytes = "1"
rand = "0.10.0"
dialoguer = "0.11"

# Headless client dependencies (now mandatory)
p256 = { version = "0.13", features = ["ecdh", "pkcs8", "arithmetic"] }
aes = "0.8"
eax = "0.5"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
der = { version = "0.7", features = ["alloc"] }
elliptic-curve = "0.13"
generic-array = "0.14"
bitflags = "2.6"
flate2 = "1"



[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
