[package]
name = "teamspeakclaw"
version = "0.0.0"
edition = "2021"
authors = ["Dr1mH4X"]
repository = "https://github.com/Dr1mH4X/TeamSpeakClaw"
description = "LLM-powered TeamSpeak bot"

[[bin]]
name = "teamspeakclaw"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "time", "local-time"] }
tracing-appender = "0.2"
slog = "2"
slog-scope = "4.4"
tracing-slog = "0.4"

thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"

futures = "0.3"
futures-util = "0.3"
bytes = "1"
rand = "0.9"
dialoguer = "0.11"
russh = "0.60.1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
audiopus = "0.3.0-rc.0"
md5 = "0.7"
base64 = "0.22"
prost = "0.12"
prost-types = "0.12"
tonic = "0.11"
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tsclientlib = { version = "0.2.0", features = ["unstable"] }
tsproto-packets = "0.1"

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3"
